// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block Details > should render the Block Details page and query the necessary info 1`] = `
<section
  class="block svelte-qy5n2j"
>
  <div
    class="block__details"
  >
    <div
      class="dusk-card data-card block-details"
    >
      <header
        class="data-card__header"
        slot="header"
      >
        <h1
          class="data-card__header-title"
        >
          Block Details
        </h1>
         
      </header>
       
      <div
        aria-label="Loading"
        class="dusk-progress-bar data-card__progress-bar"
        role="progressbar"
      >
        <div
          class="dusk-progress-bar__filler dusk-progress-bar__filler--undetermined"
        />
      </div>
      
       
    </div>
    
  </div>
   
  <div
    class="block__transactions"
  >
    <div
      class="dusk-card data-card latest-transactions-card"
    >
      <header
        class="data-card__header"
        slot="header"
      >
        <h1
          class="data-card__header-title"
        >
          Transactions
        </h1>
         
      </header>
       
      <div
        aria-label="Loading"
        class="dusk-progress-bar data-card__progress-bar"
        role="progressbar"
      >
        <div
          class="dusk-progress-bar__filler dusk-progress-bar__filler--undetermined"
        />
      </div>
      
       
    </div>
    
  </div>
</section>
`;

exports[`Block Details > should render the Block Details page and query the necessary info 2`] = `
<section
  class="block svelte-qy5n2j"
>
  <div
    class="block__details"
  >
    <div
      class="dusk-card data-card block-details"
    >
      <header
        class="data-card__header"
        slot="header"
      >
        <h1
          class="data-card__header-title"
        >
          Block Details
        </h1>
         
      </header>
       
      <div
        class="data-card__content"
      >
        <dl
          class="block-details__list"
        >
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The height of the block indicates the length of the block chain and is increased with each additional block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              height
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            <a
              aria-disabled="false"
              class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--normal dusk-icon-button block-details__list-anchor"
              href="/some-base-path/blocks/block?id=07b74b35c2c7cf8f41426cd0870bafa1a2c7adee3fdd876643548096186fc4cb"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal dusk-anchor-button__icon"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                />
              </svg>
              
               
              
              
            </a>
             
            495,868
             
            <a
              aria-disabled="false"
              class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--normal dusk-icon-button block-details__list-anchor"
              href="/some-base-path/blocks/block?id=6011556208a85e6001bd01ccbf936486b91318a7f6cbcf7ab810adf6fae34204"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal dusk-anchor-button__icon"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                />
              </svg>
              
               
              
              
            </a>
             
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The hash for the header of the block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              hash
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            bd5c99bb720b03500e89f103fe66113ba62f2e124ed9651563f38fd15977719f
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The date and time the block was created"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              timestamp
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            <time
              class="dusk-relative-time block-details__list-timestamp"
              datetime="2024-04-16T20:07:02.000Z"
              slot="definition"
            >
              Tue, 16 Apr 2024 20:07:02 GMT (last month)
              
            </time>
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The number of transactions included in the block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              transactions
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            2
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The total fees paid for the transactions in the block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              block fees paid
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            0.000580718
             DUSK
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The reward allocated to the block generator can fluctuate between 70-80% of the total reward and the flexible 10% can end up being burnt if there's no unanimous vote on a block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              block reward
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            16
             DUSK
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The block gas limit"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              block gas limit
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            5,000,000,000
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The amount of gas used generating the block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              gas used
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            580,718
             
            <div
              aria-label="Gas Used"
              class="dusk-progress-bar block-details__gas-used"
              role="progressbar"
            >
              <div
                class="dusk-progress-bar__filler"
                style="width: 0.01161436%"
              />
            </div>
             
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The average gas price for the transactions within the block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              average gas price
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            1
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The state root hash"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              state root hash
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            <span
              class="block-details__state-hash"
              slot="definition"
            >
              20bb0a677b93f084afadfd34bec3ac3feee33a020b81d9549afa2268e8543acb
            </span>
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The block header information"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              <div
                class="block-details__switch-wrapper"
              >
                header

          
                <div
                  aria-checked="false"
                  aria-disabled="false"
                  class="dusk-switch block-details__payload-switch dusk-switch--on-surface"
                  role="switch"
                  tabindex="0"
                />
              </div>
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            
          </dd>
        </dl>
      </div>
      
       
    </div>
    
  </div>
   
  <div
    class="block__transactions"
  >
    <div
      class="dusk-card data-card latest-transactions-card"
    >
      <header
        class="data-card__header"
        slot="header"
      >
        <h1
          class="data-card__header-title"
        >
          Transactions
        </h1>
         
      </header>
       
      <div
        class="data-card__content"
      >
        <div
          class="table-container transactions-table"
        >
          <table
            class="table"
          >
            <thead
              class="table__head"
            >
              <tr
                class="table__row"
              >
                <th
                  class="table__header-cell"
                >
                  ID
                </th>
                
                 
                <th
                  class="table__header-cell"
                >
                  Gas
                </th>
                
                 
                <th
                  class="table__header-cell"
                >
                  Fee (DUSK)
                </th>
                
                 
                <th
                  class="table__header-cell"
                >
                  Status
                </th>
                
                 
                <th
                  class="table__header-cell"
                >
                  Type
                </th>
                
              </tr>
            </thead>
             
            <tbody
              class="table__body"
            >
              
              <tr
                class="table__row"
              >
                <td
                  class="table__data-cell"
                >
                  <a
                    class="dusk-anchor dusk-anchor--on-surface transaction__link"
                    href="/some-base-path/transactions/transaction?id=3a3f6f90a1012ae751b4448bcb8e98def0ba2b18170239bd69fcf8e2e37f0602"
                  >
                    3a3f6f90a1...e2e37f0602
                  </a>
                   
                  <time
                    class="dusk-relative-time transaction__time"
                    datetime="2024-04-16T20:07:02.000Z"
                  >
                    last month
                  </time>
                </td>
                
                 
                <td
                  class="table__data-cell"
                >
                  <b
                    class="transaction__fee-price-label"
                  >
                    PRICE:
                  </b>
                   
                  1
                  <br />
                   
                  <b
                    class="transaction__fee-limit-label"
                  >
                    LIMIT:
                  </b>
                   
                  500,000,000
                </td>
                
                 
                <td
                  class="table__data-cell"
                >
                  0.000290866
                </td>
                
                 
                <td
                  class="table__data-cell"
                >
                  <span
                    class="dusk-badge dusk-badge--variant-success transaction-status"
                  >
                    success
                  </span>
                </td>
                
                 
                <td
                  class="table__data-cell"
                >
                  <div
                    class="transaction-type"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--large transaction-type__icon"
                      data-tooltip-disabled="false"
                      data-tooltip-id="main-tooltip"
                      data-tooltip-place="top"
                      data-tooltip-text="Moonlight"
                      data-tooltip-type="info"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21Z"
                      />
                    </svg>
                    
                     
                    <span
                      class="dusk-badge dusk-badge--variant-neutral"
                    >
                      transfer
                    </span>
                  </div>
                </td>
                
                 
              </tr>
              
              <tr
                class="table__row"
              >
                <td
                  class="table__data-cell"
                >
                  <a
                    class="dusk-anchor dusk-anchor--on-surface transaction__link"
                    href="/some-base-path/transactions/transaction?id=07bfabea1d94c16f2dc3697fa642f6cecea6e81bf76b9644efbb6e2723b76d00"
                  >
                    07bfabea1d...2723b76d00
                  </a>
                   
                  <time
                    class="dusk-relative-time transaction__time"
                    datetime="2024-04-16T20:07:02.000Z"
                  >
                    last month
                  </time>
                </td>
                
                 
                <td
                  class="table__data-cell"
                >
                  <b
                    class="transaction__fee-price-label"
                  >
                    PRICE:
                  </b>
                   
                  1
                  <br />
                   
                  <b
                    class="transaction__fee-limit-label"
                  >
                    LIMIT:
                  </b>
                   
                  500,000,000
                </td>
                
                 
                <td
                  class="table__data-cell"
                >
                  0.000289852
                </td>
                
                 
                <td
                  class="table__data-cell"
                >
                  <span
                    class="dusk-badge dusk-badge--variant-success transaction-status"
                  >
                    success
                  </span>
                </td>
                
                 
                <td
                  class="table__data-cell"
                >
                  <div
                    class="transaction-type"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--large transaction-type__icon"
                      data-tooltip-disabled="false"
                      data-tooltip-id="main-tooltip"
                      data-tooltip-place="top"
                      data-tooltip-text="Phoenix"
                      data-tooltip-type="info"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1M12,7C13.4,7 14.8,8.1 14.8,9.5V11C15.4,11 16,11.6 16,12.3V15.8C16,16.4 15.4,17 14.7,17H9.2C8.6,17 8,16.4 8,15.7V12.2C8,11.6 8.6,11 9.2,11V9.5C9.2,8.1 10.6,7 12,7M12,8.2C11.2,8.2 10.5,8.7 10.5,9.5V11H13.5V9.5C13.5,8.7 12.8,8.2 12,8.2Z"
                      />
                    </svg>
                    
                     
                    <span
                      class="dusk-badge dusk-badge--variant-neutral"
                    >
                      transfer
                    </span>
                  </div>
                </td>
                
                 
              </tr>
              
            </tbody>
          </table>
        </div>
        
      </div>
      
       
    </div>
    
  </div>
</section>
`;

exports[`Block Details > should render the Transaction section of the Block Details page with the mobile layout 1`] = `
<section
  class="block svelte-qy5n2j"
>
  <div
    class="block__details"
  >
    <div
      class="dusk-card data-card block-details"
    >
      <header
        class="data-card__header"
        slot="header"
      >
        <h1
          class="data-card__header-title"
        >
          Block Details
        </h1>
         
      </header>
       
      <div
        class="data-card__content"
      >
        <dl
          class="block-details__list"
        >
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The height of the block indicates the length of the block chain and is increased with each additional block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              height
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            <a
              aria-disabled="false"
              class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--normal dusk-icon-button block-details__list-anchor"
              href="/some-base-path/blocks/block?id=07b74b35c2c7cf8f41426cd0870bafa1a2c7adee3fdd876643548096186fc4cb"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal dusk-anchor-button__icon"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                />
              </svg>
              
               
              
              
            </a>
             
            495,868
             
            <a
              aria-disabled="false"
              class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--normal dusk-icon-button block-details__list-anchor"
              href="/some-base-path/blocks/block?id=6011556208a85e6001bd01ccbf936486b91318a7f6cbcf7ab810adf6fae34204"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal dusk-anchor-button__icon"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                />
              </svg>
              
               
              
              
            </a>
             
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The hash for the header of the block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              hash
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            bd5c99bb720b03500e89f103fe66113ba62f2e124ed9651563f38fd15977719f
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The date and time the block was created"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              timestamp
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            <time
              class="dusk-relative-time block-details__list-timestamp"
              datetime="2024-04-16T20:07:02.000Z"
              slot="definition"
            >
              Tue, 16 Apr 2024 20:07:02 GMT (last month)
              
            </time>
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The number of transactions included in the block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              transactions
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            2
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The total fees paid for the transactions in the block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              block fees paid
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            0.000580718
             DUSK
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The reward allocated to the block generator can fluctuate between 70-80% of the total reward and the flexible 10% can end up being burnt if there's no unanimous vote on a block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              block reward
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            16
             DUSK
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The block gas limit"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              block gas limit
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            5,000,000,000
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The amount of gas used generating the block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              gas used
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            580,718
             
            <div
              aria-label="Gas Used"
              class="dusk-progress-bar block-details__gas-used"
              role="progressbar"
            >
              <div
                class="dusk-progress-bar__filler"
                style="width: 0.01161436%"
              />
            </div>
             
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The average gas price for the transactions within the block"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              average gas price
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            1
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The state root hash"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              state root hash
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            <span
              class="block-details__state-hash"
              slot="definition"
            >
              20bb0a677b93f084afadfd34bec3ac3feee33a020b81d9549afa2268e8543acb
            </span>
          </dd>
          <dt
            class="details-list__term"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The block header information"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              <div
                class="block-details__switch-wrapper"
              >
                header

          
                <div
                  aria-checked="false"
                  aria-disabled="false"
                  class="dusk-switch block-details__payload-switch dusk-switch--on-surface"
                  role="switch"
                  tabindex="0"
                />
              </div>
            </div>
          </dt>
           
          <dd
            class="details-list__definition"
          >
            
          </dd>
        </dl>
      </div>
      
       
    </div>
    
  </div>
   
  <div
    class="block__transactions"
  >
    <div
      class="dusk-card data-card latest-transactions-card"
    >
      <header
        class="data-card__header"
        slot="header"
      >
        <h1
          class="data-card__header-title"
        >
          Transactions
        </h1>
         
      </header>
       
      <div
        class="data-card__content"
      >
        
        <dl
          class="detail-list"
        >
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The ID of the transaction"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              ID
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            <a
              class="dusk-anchor dusk-anchor--on-surface transaction-details__list-link"
              href="/some-base-path/transactions/transaction?id=3a3f6f90a1012ae751b4448bcb8e98def0ba2b18170239bd69fcf8e2e37f0602"
            >
              3a3f6f90a1012ae751b4448bc...8170239bd69fcf8e2e37f0602
            </a>
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="Time elapsed since the transaction was created"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              relative time
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            <time
              class="dusk-relative-time transaction-details__list-timestamp"
              datetime="2024-04-16T20:07:02.000Z"
              slot="definition"
            >
              last month
              
            </time>
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The transaction gas price in lux"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              Gas Price
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            1
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The transaction gas limit in lux"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              Gas Limit
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            500,000,000
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The transaction fee amount"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              Fee
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            0.000290866
             DUSK
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The transaction status"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              Status
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            <span
              class="dusk-badge dusk-badge--variant-success transaction-status explorer-badge"
            >
              success
            </span>
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The transaction type"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              Type
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            <div
              class="transaction-type"
            >
              <svg
                class="dusk-icon dusk-icon--size--large transaction-type__icon"
                data-tooltip-disabled="false"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="Moonlight"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21Z"
                />
              </svg>
              
               
              <span
                class="dusk-badge dusk-badge--variant-neutral"
              >
                transfer
              </span>
            </div>
            
          </dd>
        </dl>
        
        <dl
          class="detail-list"
        >
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The ID of the transaction"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              ID
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            <a
              class="dusk-anchor dusk-anchor--on-surface transaction-details__list-link"
              href="/some-base-path/transactions/transaction?id=07bfabea1d94c16f2dc3697fa642f6cecea6e81bf76b9644efbb6e2723b76d00"
            >
              07bfabea1d94c16f2dc3697fa...bf76b9644efbb6e2723b76d00
            </a>
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="Time elapsed since the transaction was created"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              relative time
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            <time
              class="dusk-relative-time transaction-details__list-timestamp"
              datetime="2024-04-16T20:07:02.000Z"
              slot="definition"
            >
              last month
              
            </time>
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The transaction gas price in lux"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              Gas Price
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            1
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The transaction gas limit in lux"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              Gas Limit
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            500,000,000
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The transaction fee amount"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              Fee
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            0.000289852
             DUSK
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The transaction status"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              Status
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            <span
              class="dusk-badge dusk-badge--variant-success transaction-status explorer-badge"
            >
              success
            </span>
          </dd>
           
          <dt
            class="details-list__term details-list__term--table"
          >
            <div
              class="details-list__term-layout"
            >
              <svg
                class="dusk-icon dusk-icon--size--normal detail-list__help"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="The transaction type"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              
               
              Type
            </div>
          </dt>
           
          <dd
            class="details-list__definition details-list__definition--table"
          >
            <div
              class="transaction-type"
            >
              <svg
                class="dusk-icon dusk-icon--size--large transaction-type__icon"
                data-tooltip-disabled="false"
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="Phoenix"
                data-tooltip-type="info"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1M12,7C13.4,7 14.8,8.1 14.8,9.5V11C15.4,11 16,11.6 16,12.3V15.8C16,16.4 15.4,17 14.7,17H9.2C8.6,17 8,16.4 8,15.7V12.2C8,11.6 8.6,11 9.2,11V9.5C9.2,8.1 10.6,7 12,7M12,8.2C11.2,8.2 10.5,8.7 10.5,9.5V11H13.5V9.5C13.5,8.7 12.8,8.2 12,8.2Z"
                />
              </svg>
              
               
              <span
                class="dusk-badge dusk-badge--variant-neutral"
              >
                transfer
              </span>
            </div>
            
          </dd>
        </dl>
        
        
      </div>
      
       
    </div>
    
  </div>
</section>
`;
